cmake_minimum_required(VERSION 3.16)

set(PROJECT_NAME "hems")

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_executable(${PROJECT_NAME})

# Set proper runtime library for Windows to avoid LIBCMT conflicts
if(WIN32)
    set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
    # Add linker option to exclude LIBCMT
    target_link_options(${PROJECT_NAME} PRIVATE "/NODEFAULTLIB:LIBCMT")
endif()

target_sources(${PROJECT_NAME}
    PRIVATE
    main.c
    hems.c
    eg_lpc_listener.c
    ma_mpc_listener.c
)

target_include_directories(${PROJECT_NAME}
    PRIVATE
    ${PROJECT_SOURCE_DIR}
)

target_link_libraries(${PROJECT_NAME}
    PRIVATE
    eebus
)
